Fixed Grid Overlapping Issue

--- a/src/app/forum/thread-summary/thread-summary.component.scss
+++ b/src/app/forum/thread-summary/thread-summary.component.scss
@@ -1,16 +1,15 @@
 // add padding above and below content of div to make it look more like the figma drawing
 
 .summary-layout {
-  display: grid;
-  grid-template-columns: 10% 90%;
-  padding-top: 40px;
+  display: inline-grid;
+  grid-template-columns: 105px calc(100% - 120px);
   grid-column-gap: 0%;
 }
 
 .user_and_date {
   display: grid;
-  grid-template-columns: 10% 10%;
-  grid-column-gap: 2%;
+  grid-template-columns: 50px 50px;
+  grid-column-gap: 60px;
 }
 
 inline-spacing {
